@@ -510,6 +510,7 @@ set(pairs_Issue
     # Test currently not working since problems with the relative check for presolved problems appear: https://git.zib.de/integer/scip/-/issues/3819
     # "instances/Issue/3842.cip\;-16812.7692740365\;default"
     "instances/Issue/3870.cip\;5133546551065818\;default"
+    "instances/Issue/3908.cip\;-20317.1313131313\;subrestart"
 )
 
 #
