@@ -1,0 +1,57 @@
+STATISTICS
+  Problem name     : seed
+  Variables        : 6 (0 binary, 5 integer, 0 implicit integer, 1 continuous)
+  Constraints      : 0 initial, 42 maximal
+OBJECTIVE
+  Sense            : minimize
+VARIABLES
+  [integer] <x0>: obj=-23, original bounds=[-200,200]
+  [integer] <x2>: obj=-63, original bounds=[-200,200]
+  [integer] <x3>: obj=-76, original bounds=[-200,200]
+  [integer] <x4>: obj=62, original bounds=[-200,200]
+  [integer] <x5>: obj=-73, original bounds=[-200,200]
+  [continuous] <x1>: obj=41, original bounds=[-200,200]
+CONSTRAINTS
+  [linear] <_C1>:  +53<x0>[I] -65<x2>[I] +5<x3>[I] -96<x4>[I] +9<x5>[I] -65<x1>[C] <= 671;
+  [linear] <_C10>:  -14<x0>[I] +92<x2>[I] +5<x3>[I] +55<x4>[I] -22<x5>[I] -46<x1>[C] >= -2297;
+  [linear] <_C11>:  -97<x0>[I] +28<x2>[I] -52<x3>[I] +39<x4>[I] -52<x5>[I] -22<x1>[C] >= -1771;
+  [linear] <_C18>:  +14<x0>[I] -80<x2>[I] -58<x3>[I] +18<x4>[I] +65<x5>[I] -<x1>[C] <= 4319;
+  [linear] <_C19>:  +2<x0>[I] +17<x2>[I] +81<x3>[I] +42<x4>[I] -48<x5>[I] -47<x1>[C] >= 2100;
+  [linear] <_C2>:  -59.14<x0>[I] +16.78<x2>[I] -5.71<x3>[I] -60.15<x4>[I] +53.86<x5>[I] +77.63<x1>[C] <= 1507.5;
+  [linear] <_C20>:  -94<x0>[I] +24<x2>[I] -24<x3>[I] -15<x4>[I] -27<x5>[I] +22<x1>[C] <= 4326;
+  [linear] <_C21>:  -48<x0>[I] -54<x2>[I] -58<x3>[I] +33<x4>[I] +52<x5>[I] -98<x1>[C] >= 4281;
+  [linear] <_C22>:  -85<x0>[I] +94<x2>[I] -<x3>[I] -22<x4>[I] -38<x5>[I] -8<x1>[C] >= 1169;
+  [linear] <_C25>:  +51<x0>[I] -95<x2>[I] +89<x3>[I] -48<x4>[I] +8<x5>[I] -83<x1>[C] >= -1788;
+  [linear] <_C26>:  +28<x0>[I] +76<x2>[I] +86<x3>[I] +66<x4>[I] -33<x5>[I] -43<x1>[C] >= -2298;
+  [linear] <_C27>:  +50<x0>[I] -16<x2>[I] +84<x3>[I] -29<x4>[I] -14<x5>[I] -81<x1>[C] >= -4523;
+  [linear] <_C28>:  -84<x0>[I] -18<x2>[I] -87<x3>[I] -72<x4>[I] -58<x5>[I] -70<x1>[C] <= 2214;
+  [linear] <_C3>:  +75<x0>[I] -95<x2>[I] +61<x3>[I] +89<x4>[I] +31<x5>[I] -99<x1>[C] >= 1563;
+  [linear] <_C31>:  +5<x0>[I] +17<x2>[I] -19<x3>[I] +61<x4>[I] +46<x5>[I] +34<x1>[C] >= -193;
+  [linear] <_C36>:  +3.17<x0>[I] +76.9<x2>[I] -21.63<x3>[I] +64.88<x4>[I] -32.86<x5>[I] +1.42<x1>[C] <= 4377.36;
+  [linear] <_C38>:  -19<x0>[I] -76<x2>[I] -74<x3>[I] +27<x4>[I] +68<x5>[I] +29<x1>[C] <= -3025;
+  [linear] <_C39>:  -2<x0>[I] -16<x2>[I] +15<x3>[I] -87<x4>[I] -60<x5>[I] -99<x1>[C] <= 2000;
+  [linear] <_C40>:  -17<x0>[I] -50<x2>[I] -6<x3>[I] +44<x4>[I] -72<x5>[I] +99<x1>[C] <= -1668;
+  [linear] <_C42>:  -59<x0>[I] -77<x2>[I] -23<x3>[I] +22<x4>[I] -37<x5>[I] +42<x1>[C] <= 4656;
+  [linear] <_C44>:  -60<x0>[I] -73<x2>[I] -79<x3>[I] -29<x4>[I] +85<x5>[I] +15<x1>[C] >= -864;
+  [linear] <_C45>:  +41<x0>[I] +4<x2>[I] -25<x3>[I] -51<x4>[I] -7<x5>[I] -48<x1>[C] <= 4357;
+  [linear] <_C46>:  +23<x0>[I] +40<x2>[I] +88<x3>[I] -46<x4>[I] +64<x5>[I] -17<x1>[C] >= -1656;
+  [linear] <_C48>:  -73<x0>[I] -24<x2>[I] -79<x3>[I] +77<x4>[I] +8<x5>[I] -93<x1>[C] >= 4033;
+  [linear] <_C49>:  +7<x0>[I] -3<x2>[I] +40<x3>[I] +42<x4>[I] +19<x5>[I] -52<x1>[C] >= 242;
+  [linear] <_C54>:  -47<x0>[I] +2<x2>[I] -7<x3>[I] +21<x4>[I] -29<x5>[I] +23<x1>[C] >= -2872;
+  [linear] <_C59>:  +51<x0>[I] +35<x2>[I] +53<x3>[I] -59<x4>[I] -75<x5>[I] +30<x1>[C] <= 4948;
+  [linear] <_C6>:  +17<x0>[I] +39<x2>[I] +92<x3>[I] +5<x4>[I] +30<x5>[I] +99<x1>[C] <= 3558;
+  [linear] <_C60>:  -55<x0>[I] -59<x2>[I] +26<x3>[I] +45<x4>[I] -31<x5>[I] -78<x1>[C] >= -2445;
+  [linear] <_C61>:  -77.7<x0>[I] +42.84<x2>[I] -71.46<x3>[I] +78.97<x4>[I] -24.19<x5>[I] +84.25<x1>[C] >= -3596.23;
+  [linear] <_C62>:  -53.11<x0>[I] +65.29<x2>[I] +88.24<x3>[I] -70.8<x4>[I] -7.2<x5>[I] +67.64<x1>[C] <= 3973.31;
+  [linear] <_C63>:  +41<x0>[I] -4<x2>[I] +30<x3>[I] +55<x4>[I] -43<x5>[I] +31<x1>[C] <= 1568;
+  [linear] <_C67>:  +92<x0>[I] +25<x2>[I] +83<x3>[I] -91<x4>[I] +3<x5>[I] +10<x1>[C] <= 4398;
+  [linear] <_C7>:  +85<x0>[I] -13<x2>[I] +14<x3>[I] -15<x4>[I] +35<x5>[I] -12<x1>[C] <= 2235;
+  [linear] <_C70>:  -7<x0>[I] +30<x2>[I] -41<x3>[I] +49<x4>[I] +74<x5>[I] +79<x1>[C] >= -1188;
+  [linear] <_C72>:  -48<x0>[I] +78<x2>[I] -28<x3>[I] +84<x4>[I] -57<x5>[I] +23<x1>[C] >= -1429;
+  [linear] <_C73>:  -33<x0>[I] +57<x2>[I] -4<x3>[I] -96<x4>[I] -95<x5>[I] +55<x1>[C] <= -997;
+  [linear] <_C74>:  -65.7<x0>[I] -44.11<x2>[I] -84.74<x3>[I] +99.83<x4>[I] +98.48<x5>[I] +61.29<x1>[C] <= 4254.62;
+  [linear] <_C79>:  -42<x0>[I] +51<x2>[I] -82<x3>[I] +68<x4>[I] -6<x5>[I] +87<x1>[C] <= 412;
+  [linear] <_C80>:  +4<x0>[I] +36<x2>[I] +88<x3>[I] -89<x4>[I] -86<x5>[I] +52<x1>[C] <= -505;
+  [linear] <_C81>:  -39<x0>[I] +29<x2>[I] -77<x3>[I] -67<x4>[I] -80<x5>[I] +19<x1>[C] <= 2859;
+  [linear] <_C9>:  -48<x0>[I] -13<x2>[I] -27<x3>[I] +79<x4>[I] -<x5>[I] -26<x1>[C] >= 4684;
+END
