@@ -8,6 +8,7 @@ Fixed bugs
 
 - avoid hashmap key error in removal of doubletons and singletons in dual presolve of setppc constraints by skipping tripleton locks
 - when upgrading to xor constraint require parity variable to be enforced integral
+- provide the depth of the applied effective root with SCIPtreeGetEffectiveRootDepth() to avert invalid globalization of constraint set changes
 
 Build system
 ------------
